[fix] CSS grid gap, code cleanup

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -644,6 +644,7 @@ a {
 .session ul {
   display:grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 10px;
 }
 
 .sessionTitle {
@@ -744,21 +745,6 @@ li:hover .type {
   font-style: italic;
   background-color:#e3e3e3;
 }
-
-/* .example:after {
-  bottom: 100%;
-  left: 25%;
-  border: solid transparent;
-  content: "";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-  border-color: rgba(227, 227, 227, 0);
-  border-bottom-color: #e3e3e3;
-  border-width: 10px;
-  margin-left: -10px;
-} */
 
 .clickable {
   cursor:pointer;
